<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.connormurphy.socialplanner.SelectItem">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:id="@+id/activity_select_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/activity_planning_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/description"
            android:textSize="18sp"
            android:paddingBottom="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_name"
                android:textSize="18sp"
                android:paddingBottom="5dp" />

            <TextView
                android:id="@+id/activity_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_text"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/select_date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/select_date"
            android:textSize="18sp" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false" />

        <TextView
            android:id="@+id/select_time_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_time"
            android:textSize="18sp" />

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"/>

        <TextView
            android:id="@+id/select_contact_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_contact"
            android:textSize="18sp"
            android:paddingBottom="5dp" />

        <Button
            android:id="@+id/choose_contact_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_contact"
            android:onClick="onChooseContactClick"
            android:paddingBottom="5dp"
            style="?android:attr/buttonBarButtonStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/selected_contact_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/selected_contact"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/selected_contact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_text"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/send_plan_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/send_plan"
                android:onClick="onTextFriend"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:text="@string/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancel_button"
                android:layout_weight="1"
                android:onClick="onCancelClicked"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
