<?xml version="1.0" encoding="utf-8"?>


<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:paddingBottom="5dp"
    android:paddingTop="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:columnCount="1"
    android:rowCount="5">

    <TextView
        android:layout_column="0"
        android:layout_row="0"
        android:id="@+id/greeting_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/greeting_default"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="36sp" />

    <GridLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1"
        android:layout_column="0"
        android:layout_row="1">

        <TextView
            android:layout_column="0"
            android:layout_row="0"
            android:id="@+id/availability_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/availability"
            android:textAlignment="viewStart"
            android:textSize="18sp" />

        <CheckBox
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox"
            android:layout_gravity="end"
            android:textSize="18sp" />

    </GridLayout>

    <TextView
        android:layout_column="0"
        android:layout_row="2"
        android:id="@+id/things_to_do_text"
        android:text="@string/things_to_do"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_row="4"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        style="?android:attr/buttonBarStyle">

        <Button
            android:text="@string/add_activities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:id="@+id/add_activities_button"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:text="@string/edit_activities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:id="@+id/edit_activities_button"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

    <ListView
        android:layout_column="0"
        android:layout_row="3"
        android:layout_width="match_parent"
        android:id="@+id/things_to_do"
        android:layout_height="373dp">
    </ListView>

</GridLayout>
