<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.example.connormurphy.socialplanner.AddActivity"
    android:columnCount="1"
    android:rowCount="4">

    <TextView
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/add_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_prompt_text"
        android:textSize="18sp" />

    <EditText
        android:layout_column="0"
        android:layout_row="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_activity_name"
        android:inputType="text"
        android:hint="@string/activity_name" />

    <LinearLayout
        android:layout_column="0"
        android:layout_row="3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/done_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:onClick="finishAdding"
            android:id="@+id/done_button" />

        <Button
        android:text="@string/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
            android:layout_weight="1"
        android:onClick="cancelAdding"
        android:id="@+id/cancel_button" />
    </LinearLayout>

</GridLayout>
